Implement JWT Authentication/Authorization

--- a/JWTApp/JWTApp/appsettings.Development.json
+++ b/JWTApp/JWTApp/appsettings.Development.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=JWTAppDB;Trusted_Connection=True;"
+  },
+  "JWTSettings": {
+    "Issuer": "https://localhost:7243",
+    "Audience": "https://localhost:7243",
+    "ExpirationMinutes":  60
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
