Limit Succesful API calls to 5 per minute

--- a/JWTApp/JWTApp/appsettings.json
+++ b/JWTApp/JWTApp/appsettings.json
@@ -4,6 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
+  ,"AllowedHosts": "*"
+  ,"IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 5
+      }
+    ]
+  }
 }
